--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="popup-content">
       <table>
         <tr>
-          <td>#</td><td>P</td><td>W</td><td>L</td><td>D</td><td>F</td><td>A</td><td>GD</td><td>Pts</td>
+          <td>POS</td><td>P</td><td>W</td><td>L</td><td>D</td><td>F</td><td>A</td><td>GD</td><td>Pts</td>
         </tr>
         <tr id="popupStatsRow"></tr>
       </table>
