--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
       height: 35px;
       width: 35px;
       border-radius: 4px;
-      margin-bottom: 8px;
+      margin-top: 6px;
+      margin-bottom: 6px;
     }
 
     .popup-content table {
