--- a/index.html
+++ b/index.html
@@ -135,6 +135,24 @@
       width: 100%;
       color: #aaa;
     }
+    .form-span {
+    display: inline-block;
+    width: 1ch;
+    font-weight: bold;
+    text-align: center;
+    }
+
+    .form-w {
+      color: #22c55e; /* green for win */
+    }
+
+    .form-d {
+      color: #e2e8f0; /* white for draw */
+    }
+
+    .form-l {
+      color: #ef4444; /* red for loss */
+    }
   </style>
 </head>
 <body>
@@ -253,11 +271,15 @@
         <td>${team.points}</td>
       `;
 
-      document.getElementById('popupForm').textContent = `Form: ${team.form}`;
-      document.getElementById('popupLastSeason').textContent = `Last Season: ${team.lastPos} in ${team.lastLeague}`;
+      const formHTML = [...team.form].map(result => {
+      const cls = result === 'W' ? 'form-w' : result === 'D' ? 'form-d' : 'form-l';
+      return `<span class="form-span ${cls}">${result}</span>`;
+      }).join('');
 
+      document.getElementById('popupForm').innerHTML = `Form: ${formHTML}`;
+      document.getElementById('popupLastSeason').textContent = `Last Season: ${lastPos} in ${lastLeague}`;
+      document.getElementById('popupLogo').src = logo;
       document.getElementById('teamPopup').style.display = 'flex';
-    }
 
     function closePopup() {
       document.getElementById('teamPopup').style.display = 'none';
