--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
     .form-l {
       color: #ef4444;
     }
+
+    .popup-nextfixture {
+      font-size: 0.45rem;
+      text-align: left;
+      margin-top: -12px;
+      width: 100%;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
@@ -183,6 +191,7 @@
       </table>
       <div id="popupForm" style="margin-top: 4px;"></div>
       <div class="popup-lastseason" id="popupLastSeason"></div>
+      <div class="popup-nextfixture" id="popupNextFixture"></div>
     </div>
   </div>
 
@@ -279,6 +288,7 @@
 
       document.getElementById('popupForm').innerHTML = `Form: ${formHTML}`;
       document.getElementById('popupLastSeason').textContent = `Last Season: ${team.lastPos} in ${team.lastLeague}`;
+      document.getElementById('popupNextFixture').textContent = team.nextFixture
       document.getElementById('teamPopup').style.display = 'flex';
     }
 
