--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
       width: 1ch;
       font-weight: bold;
       text-align: center;
-      letter-spacing: 3px;
     }
 
     .form-w {
@@ -190,7 +189,7 @@
         </tr>
         <tr id="popupStatsRow"></tr>
       </table>
-      <div id="popupForm" style="margin-top: 4px; margin-bottom: 8px;"></div>
+      <div id="popupForm" style="margin-top: 4px;"></div>
       <div class="popup-nextfixture" id="popupNextFixture"></div>
       <div class="popup-lastseason" id="popupLastSeason"></div>
     </div>
