--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
       font-size: 0.55rem;
       display: none;
       flex-direction: column;
+      justify-content: space-between;
+      height: 320px;
       align-items: center;
       text-align: center;
     }
@@ -106,6 +108,14 @@
       border-radius: 4px;
       margin-top: 6px;
       margin-bottom: 6px;
+    }
+
+    .popup-content {
+      flex-grow: 1;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .popup-content table {
@@ -128,25 +138,23 @@
       cursor: pointer;
     }
 
-    .popup-lastseason {
-      font-size: 0.45rem;
-      text-align: right;
-      margin-top: 8px;
+    .popup-footer {
+      display: flex;
+      justify-content: space-between;
       width: 100%;
-      color: #aaa;
+      margin-top: auto;
+      padding-top: 6px;
     }
 
-    .popup-nextfixture {
+    .popup-nextfixture,
+    .popup-lastseason {
       font-size: 0.45rem;
-      text-align: left;
-      margin-top: -12px;
-      width: 100%;
       color: #aaa;
     }
 
     .form-span {
       display: inline-block;
-      width: 1ch;
+      width: 1.2ch;
       font-weight: bold;
       text-align: center;
       margin-right: 6px;
@@ -190,121 +198,121 @@
         </tr>
         <tr id="popupStatsRow"></tr>
       </table>
-      <div id="popupForm" style="margin-top: 4px;"></div>
-      <div class="popup-nextfixture" id="popupNextFixture"></div>
-      <div class="popup-lastseason" id="popupLastSeason"></div>
+      <div id="popupForm" style="margin-top: 6px;"></div>
+      <div class="popup-footer">
+        <div class="popup-nextfixture" id="popupNextFixture"></div>
+        <div class="popup-lastseason" id="popupLastSeason"></div>
+      </div>
     </div>
   </div>
 
-<!-- no change to head or styles so skipping straight to JS bits -->
-...
-<script>
-  async function getTable() {
-    try {
-      const res = await fetch('./data/standings.json');
-      if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
+  <script>
+    async function getTable() {
+      try {
+        const res = await fetch('./data/standings.json');
+        if (!res.ok) throw new Error(`Failed to load standings.json: ${res.status} ${res.statusText}`);
 
-      const data = await res.json();
-      const league = data.response?.[0]?.league;
+        const data = await res.json();
+        const league = data.response?.[0]?.league;
 
-      if (!league || !league.standings) {
-        document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
-        return;
-      }
+        if (!league || !league.standings) {
+          document.body.innerHTML = '<p style="color:#ccc; font-family: var(--font-family); padding: 1rem; text-align:center;">We\'ll see you in the new season!</p>';
+          return;
+        }
 
-      const standings = league.standings[0];
-      const tbody = document.querySelector("#leagueTable tbody");
-      tbody.innerHTML = '';
+        const standings = league.standings[0];
+        const tbody = document.querySelector("#leagueTable tbody");
+        tbody.innerHTML = '';
 
-      standings.forEach(team => {
-        const { id, name } = team.team;
-        const played = team.all.played ?? '-';
-        const points = team.points ?? '-';
-        const position = team.rank;
-        const highlight = team.highlight ?? false;
-        const lastLeague = team.lastSeasonLeague ?? 'Unknown League';
-        const lastPos = team.lastSeasonPosition ?? '?';
-        const nextUp = team.nextUp ?? '';  // 🔥 FIXED
-        const won = team.all.win ?? '-';
-        const draw = team.all.draw ?? '-';
-        const lose = team.all.lose ?? '-';
-        const goalsFor = team.all.goals.for ?? '-';
-        const goalsAgainst = team.all.goals.against ?? '-';
-        const goalDiff = goalsFor - goalsAgainst;
-        const form = team.form ?? 'N/A';
+        standings.forEach(team => {
+          const { id, name } = team.team;
+          const played = team.all.played ?? '-';
+          const points = team.points ?? '-';
+          const position = team.rank;
+          const highlight = team.highlight ?? false;
+          const lastLeague = team.lastSeasonLeague ?? 'Unknown League';
+          const lastPos = team.lastSeasonPosition ?? '?';
+          const nextUp = team.nextUp ?? '';
+          const won = team.all.win ?? '-';
+          const draw = team.all.draw ?? '-';
+          const lose = team.all.lose ?? '-';
+          const goalsFor = team.all.goals.for ?? '-';
+          const goalsAgainst = team.all.goals.against ?? '-';
+          const goalDiff = goalsFor - goalsAgainst;
+          const form = team.form ?? 'N/A';
 
-        const row = document.createElement('tr');
-        if (highlight) row.classList.add('cardiff-highlight');
+          const row = document.createElement('tr');
+          if (highlight) row.classList.add('cardiff-highlight');
 
-        row.innerHTML = `
-          <td>${name}</td>
-          <td>${played}</td>
-          <td>${points}</td>
-        `;
+          row.innerHTML = `
+            <td>${name}</td>
+            <td>${played}</td>
+            <td>${points}</td>
+          `;
 
-        row.addEventListener('click', () => {
-          showPopup({
-            name,
-            logo: `./assets/logos/${id}.png`,
-            position,
-            played,
-            won,
-            lose,
-            draw,
-            goalsFor,
-            goalsAgainst,
-            goalDiff,
-            points,
-            form,
-            lastLeague,
-            lastPos,
-            nextUp // 🔥 FIXED
+          row.addEventListener('click', () => {
+            showPopup({
+              name,
+              logo: `./assets/logos/${id}.png`,
+              position,
+              played,
+              won,
+              lose,
+              draw,
+              goalsFor,
+              goalsAgainst,
+              goalDiff,
+              points,
+              form,
+              lastLeague,
+              lastPos,
+              nextUp
+            });
           });
+
+          tbody.appendChild(row);
         });
-
-        tbody.appendChild(row);
-      });
-    } catch (err) {
-      document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
-      console.error(err);
+      } catch (err) {
+        document.body.innerHTML = `<p style="color:#ff6666; padding: 1rem; text-align:center;">⚠️ Failed to load table: ${err.message}</p>`;
+        console.error(err);
+      }
     }
-  }
 
-  function showPopup(team) {
-    document.getElementById('popupName').textContent = team.name;
-    document.getElementById('popupLogo').src = team.logo;
+    function showPopup(team) {
+      document.getElementById('popupName').textContent = team.name;
+      document.getElementById('popupLogo').src = team.logo;
 
-    document.getElementById('popupStatsRow').innerHTML = `
-      <td>${team.position}</td>
-      <td>${team.played}</td>
-      <td>${team.won}</td>
-      <td>${team.lose}</td>
-      <td>${team.draw}</td>
-      <td>${team.goalsFor}</td>
-      <td>${team.goalsAgainst}</td>
-      <td>${team.goalDiff}</td>
-      <td>${team.points}</td>
-    `;
+      document.getElementById('popupStatsRow').innerHTML = `
+        <td>${team.position}</td>
+        <td>${team.played}</td>
+        <td>${team.won}</td>
+        <td>${team.lose}</td>
+        <td>${team.draw}</td>
+        <td>${team.goalsFor}</td>
+        <td>${team.goalsAgainst}</td>
+        <td>${team.goalDiff}</td>
+        <td>${team.points}</td>
+      `;
 
-    const formHTML = [...team.form].map(result => {
-      const cls = result === 'W' ? 'form-w' : result === 'D' ? 'form-d' : 'form-l';
-      return `<span class="form-span ${cls}">${result}</span>`;
-    }).join('');
+      const formHTML = [...team.form].map(result => {
+        const cls = result === 'W' ? 'form-w' : result === 'D' ? 'form-d' : 'form-l';
+        return `<span class="form-span ${cls}">${result}</span>`;
+      }).join('');
 
-    document.getElementById('popupForm').innerHTML = `Form: ${formHTML}`;
-    document.getElementById('popupLastSeason').textContent = `Last Season: ${team.lastPos} | ${team.lastLeague}`;
-    document.getElementById('popupNextFixture').textContent = team.nextUp
-      ? `Next Up: ${team.nextUp}` // 🔥 FIXED
-      : '';
+      document.getElementById('popupForm').innerHTML = `Form: ${formHTML}`;
+      document.getElementById('popupLastSeason').textContent = `Last Season: ${team.lastPos} | ${team.lastLeague}`;
+      document.getElementById('popupNextFixture').textContent = team.nextUp
+        ? `Next Up: ${team.nextUp}`
+        : '';
 
-    document.getElementById('teamPopup').style.display = 'flex';
-  }
+      document.getElementById('teamPopup').style.display = 'flex';
+    }
 
-  function closePopup() {
-    document.getElementById('teamPopup').style.display = 'none';
-  }
+    function closePopup() {
+      document.getElementById('teamPopup').style.display = 'none';
+    }
 
-  getTable();
-</script>
+    getTable();
+  </script>
 </body>
 </html>
