--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      margin-top: auto;
-      padding-top: 6px;
+      margin-top: 4px;
     }
 
     .popup-nextfixture,
