--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: 0f172a;
+      background-color: #0f172a;
       border: 1px solid #555;
       border-radius: 8px;
       padding: 12px;
