--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
       font-size: 0.55rem;
       display: none;
       flex-direction: column;
-      justify-content: space-between;
-      height: 320px;
       align-items: center;
       text-align: center;
+      max-height: 90vh;
+      overflow-y: auto;
     }
 
     .popup img {
@@ -111,11 +111,10 @@
     }
 
     .popup-content {
-      flex-grow: 1;
       width: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      gap: 8px;
     }
 
     .popup-content table {
@@ -142,7 +141,6 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      margin-top: 4px;
     }
 
     .popup-nextfixture,
@@ -197,7 +195,7 @@
         </tr>
         <tr id="popupStatsRow"></tr>
       </table>
-      <div id="popupForm" style="margin-top: 6px;"></div>
+      <div id="popupForm""></div>
       <div class="popup-footer">
         <div class="popup-nextfixture" id="popupNextFixture"></div>
         <div class="popup-lastseason" id="popupLastSeason"></div>
