--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
       width: 100%;
     }
 
+    #popupForm {
+      text-align: center;
+    }
+    
     .popup-nextfixture,
     .popup-lastseason {
       font-size: 0.50rem;
