--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: #0f172a;
-      border: 1px solid #555;
+      border: 1px solid #0f172a;
       border-radius: 8px;
       padding: 12px;
       width: 90%;
@@ -114,7 +114,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 6px;
     }
 
     .popup-content table {
