--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     .popup-content table {
       width: 100%;
       font-size: 0.55rem;
-      margin-bottom: 6px;
+      margin-bottom: 2px;
     }
 
     .popup-content table td {
@@ -142,12 +142,12 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      margin-top: 6px;
+      margin-top: 2px;
     }
 
     #popupForm {
       text-align: center;
-      margin: 6px 0;
+      margin: 2px;
     }
     
     .popup-nextfixture,
