--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 
     #popupForm {
       text-align: center;
-      margin: 0px;
+      margin-top: 0px;
+      margin-bottom: -2px;
     }
     
     .popup-nextfixture,
