--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     body {
       background: transparent;
       font-family: var(--font-family);
+      spacing: 0.25rem;
       font-size: 0.75rem;
       margin: 0;
       padding: 0;
