--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       spacing: 0.25rem;
       font-size: 0.75rem;
       margin: 0;
-      padding: 0;
+      font-weight: 500;
       overflow: hidden;
       height: 100vh;
       color: var(--text-color);
