--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       background: transparent;
       font-family: var(--font-family);
       spacing: 0.25rem;
+      letter-spacing: .1px;
       font-size: 0.75rem;
       margin: 0;
       font-weight: 500;
