--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       letter-spacing: .1px;
       font-size: 0.75rem;
       margin: 0;
+      padding: 0;
       font-weight: 500;
       overflow: hidden;
       height: 100vh;
