--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #0f172a;
+      background-color: #0f172a 20%;
       border: 100px solid #0f172a;
       border-radius: 8px;
       padding: 120px;
