--- a/index.html
+++ b/index.html
@@ -102,20 +102,8 @@
       text-align: center;
       max-height: 90vh;
       overflow-y: auto;
-      position: relative; /* Add this */
-      overflow: hidden;    /* Clip background image overflow */
-    }
-
-    .popup-bg-logo {
-      position: absolute;
-      bottom: -20px;
-      right: -20px;
-      width: 150px;
-      opacity: 0.06;
-      transform: rotate(-20deg);
-      filter: blur(3px);
-      pointer-events: none; /* Don't block interaction */
-      z-index: 0;
+      position: relative;
+      overflow: hidden;
     }
 
     .popup img {
@@ -124,6 +112,7 @@
       border-radius: 4px;
       margin-top: 3px;
       margin-bottom: 6px;
+      z-index: 1;
     }
 
     .popup-content {
@@ -131,6 +120,7 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
+      z-index: 1;
     }
 
     .popup-content table {
@@ -152,6 +142,7 @@
       color: #aaa;
       font-size: 0.85rem;
       cursor: pointer;
+      z-index: 2;
     }
 
     .popup-footer {
@@ -159,14 +150,16 @@
       justify-content: space-between;
       width: 100%;
       margin-top: 0px;
+      z-index: 1;
     }
 
     #popupForm {
       text-align: center;
       margin-top: 0px;
       margin-bottom: -2px;
+      z-index: 1;
     }
-    
+
     .popup-nextfixture,
     .popup-lastseason {
       font-size: 0.50rem;
@@ -191,6 +184,18 @@
 
     .form-l {
       color: #ef4444;
+    }
+
+    .popup-bg-logo {
+      position: absolute;
+      bottom: -20px;
+      right: -20px;
+      width: 160px;
+      opacity: 0.05;
+      transform: rotate(-20deg);
+      filter: blur(3px);
+      pointer-events: none;
+      z-index: 0;
     }
   </style>
 </head>
@@ -219,12 +224,13 @@
         </tr>
         <tr id="popupStatsRow"></tr>
       </table>
-      <div id="popupForm""></div>
+      <div id="popupForm"></div>
       <div class="popup-footer">
         <div class="popup-nextfixture" id="popupNextFixture"></div>
         <div class="popup-lastseason" id="popupLastSeason"></div>
       </div>
     </div>
+    <img id="popupBgLogo" class="popup-bg-logo" src="" alt="" />
   </div>
 
   <script>
@@ -271,13 +277,6 @@
             <td>${points}</td>
           `;
 
-          const popup = document.querySelector('.popup');
-          const teamId = 63; // or whatever
-          const logo = document.createElement('img');
-          logo.src = `assets/logos/${teamId}.png`;
-          logo.className = 'popup-bg-logo';
-          popup.appendChild(logo);
-
           row.addEventListener('click', () => {
             showPopup({
               name,
@@ -306,15 +305,16 @@
       }
     }
 
-     function ordinal(n) {
+    function ordinal(n) {
       const s = ["th", "st", "nd", "rd"];
       const v = n % 100;
       return n + (s[(v - 20) % 10] || s[v] || s[0]);
     }
-    
+
     function showPopup(team) {
       document.getElementById('popupName').textContent = team.name.toUpperCase();
       document.getElementById('popupLogo').src = team.logo;
+      document.getElementById('popupBgLogo').src = team.logo;
 
       document.getElementById('popupStatsRow').innerHTML = `
         <td>${team.position}</td>
