--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
           `;
 
           row.addEventListener('click', () => {
+          console.log("TEAM ID:", id, " | TEAM NAME:", name);
             showPopup({
               name,
               logo: `./assets/logos/${id}.png`,
