--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       margin: 0;
       padding: 0;
       font-weight: 500;
-      overflow: hidden;
+      overflow-y: hidden;
       height: 100vh;
       color: var(--text-color);
     }
@@ -102,7 +102,6 @@
       text-align: center;
       max-height: 90vh;
       overflow-y: auto;
-      position: relative;
       overflow: hidden;
     }
 
