--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           `;
 
           row.addEventListener('click', () => {
-          console.log("TEAM ID:", id, " | TEAM NAME:", name);
+          console.log("Popup logo path:", team.logo);
             showPopup({
               name,
               logo: `./assets/logos/${id}.png`,
