--- a/index.html
+++ b/index.html
@@ -187,11 +187,12 @@
 
     .popup-bg-logo {
       position: absolute;
-      bottom: 0px;
+      bottom: -40px;
       right: 0px;
-      width: 160px;
-      opacity: 0.05;
-      transform: rotate(-20deg);
+      width: 250px;
+      height: 250px;
+      opacity: 0.03;
+      transform: rotate(-25deg);
       filter: blur(3px);
       pointer-events: none;
       z-index: 10;
