--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       position: absolute;
       bottom: -40px;
       right: 0px;
-      width: 250px;
-      height: 250px;
+      width: 250px !important;
+      height: 250px !important;
       opacity: 0.03;
       transform: rotate(-25deg);
       filter: blur(3px);
