--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       right: 0px;
       width: 250px !important;
       height: 250px !important;
-      opacity: 0.03;
+      opacity: 0.03 !important;
       transform: rotate(-25deg);
       filter: blur(3px);
       pointer-events: none;
